--- a/deployserver/package.json
+++ b/deployserver/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dockerode": "^2.5.8",
+    "express": "^4.17.1",
+    "tar-fs": "^2.0.0"
   }
 }
