--- a/deployserver/package.json
+++ b/deployserver/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dockerode": "^2.5.8",
     "express": "^4.17.1",
+    "simple-git": "^1.126.0",
     "tar-fs": "^2.0.0"
   }
 }
